[gd_scene load_steps=21 format=3 uid="uid://crwqyvvvfl5o7"]

[ext_resource type="Texture2D" uid="uid://i036kmeuy3sl" path="res://Scenes/Main/MainUI/main_ui_bg_tile.png" id="1_25roi"]
[ext_resource type="Script" uid="uid://deoy300w1khdw" path="res://Scenes/Main/MainUI/main_ui.gd" id="1_hvcgl"]
[ext_resource type="Texture2D" uid="uid://oqfi3l4hxqan" path="res://Scenes/Main/MainUI/main_ui_bg_tile_2.png" id="1_pbqvl"]
[ext_resource type="FontFile" uid="uid://ds0qrrbdvqa6n" path="res://Autoloads/Resources/Fonts/SF Sports Night.ttf" id="2_25mr1"]
[ext_resource type="Texture2D" uid="uid://x245tsph8p3j" path="res://Scenes/Main/MainUI/main_ui_bg_tile_3.png" id="3_25mr1"]
[ext_resource type="Texture2D" uid="uid://du7drstgtwvao" path="res://Autoloads/Icons/icon_puzzle_maker.png" id="3_365me"]
[ext_resource type="FontFile" uid="uid://q2kbgu0jja56" path="res://Autoloads/Resources/Fonts/sportsjersey.ttf" id="3_i4lxe"]
[ext_resource type="Texture2D" uid="uid://d20w5s52s1xu" path="res://Scenes/Main/MainUI/main_ui_bg_tile_4.png" id="4_i4lxe"]
[ext_resource type="PackedScene" uid="uid://b6dv16yi6788v" path="res://Scenes/Main/MainUI/overlay_menu.tscn" id="5_ajf2v"]
[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Autoloads/Resources/Themes/edit_button.tres" id="5_mbwly"]
[ext_resource type="Texture2D" uid="uid://bdn3a8f8fdq1r" path="res://Autoloads/Icons/icon_move_white_flipped.png" id="5_pxhfb"]
[ext_resource type="Texture2D" uid="uid://b4x6w635hpwxm" path="res://Autoloads/Icons/icon_save.png" id="6_gu5vi"]
[ext_resource type="Texture2D" uid="uid://b63cjwl8cphrc" path="res://Autoloads/Icons/icon_load.png" id="7_bgm7v"]
[ext_resource type="Texture2D" uid="uid://hqu8087deqdr" path="res://Autoloads/Icons/icon_reset.png" id="8_bgm7v"]
[ext_resource type="PackedScene" uid="uid://j77lq1vyxxe5" path="res://Scenes/Main/MainUI/default_menu.tscn" id="8_pxhfb"]
[ext_resource type="PackedScene" uid="uid://djra87ar5vdie" path="res://Scenes/Main/MainUI/team_menu.tscn" id="9_us2df"]
[ext_resource type="PackedScene" uid="uid://bywv2d1wh532n" path="res://Scenes/Main/MainUI/field_effects_menu.tscn" id="10_daosl"]
[ext_resource type="Texture2D" uid="uid://c56bab4mbpfwg" path="res://Autoloads/Icons/icon_github.png" id="15_piel0"]

[sub_resource type="LabelSettings" id="LabelSettings_i4lxe"]
line_spacing = 0.0
paragraph_spacing = -4.0
font = ExtResource("2_25mr1")
font_size = 84
font_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.21960784)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hvcgl"]
font = ExtResource("3_i4lxe")
font_size = 72
font_color = Color(0, 0, 0, 1)

[node name="MainUI" type="Control"]
custom_minimum_size = Vector2(900, 2025)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_hvcgl")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BG" type="TextureRect" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_25roi")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="RealMainContainer" type="VBoxContainer" parent="MainContainer/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="UppestContainer" type="HBoxContainer" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="Iconrec" type="TextureRect" parent="MainContainer/BG/RealMainContainer/UppestContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_365me")
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="MainContainer/BG/RealMainContainer/UppestContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
size_flags_horizontal = 4
text = "Beastieball
Puzzle Maker"
label_settings = SubResource("LabelSettings_i4lxe")
horizontal_alignment = 1
vertical_alignment = 2

[node name="UpperContainer" type="HBoxContainer" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BackButtonContainer" type="MarginContainer" parent="MainContainer/BG/RealMainContainer/UpperContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="BackButton" type="Button" parent="MainContainer/BG/RealMainContainer/UpperContainer/BackButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
icon = ExtResource("5_pxhfb")
icon_alignment = 1
expand_icon = true

[node name="UpperLabel" type="Label" parent="MainContainer/BG/RealMainContainer/UpperContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Editing Overlay"
label_settings = SubResource("LabelSettings_hvcgl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8

[node name="MenuContainer" type="MarginContainer" parent="MainContainer/BG/RealMainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="DefaultMenu" parent="MainContainer/BG/RealMainContainer/MenuContainer" instance=ExtResource("8_pxhfb")]
unique_name_in_owner = true
layout_mode = 2

[node name="YourTeamMenu" parent="MainContainer/BG/RealMainContainer/MenuContainer" instance=ExtResource("9_us2df")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OpponentTeamMenu" parent="MainContainer/BG/RealMainContainer/MenuContainer" instance=ExtResource("9_us2df")]
unique_name_in_owner = true
visible = false
layout_mode = 2
side = 1

[node name="OverlayMenu" parent="MainContainer/BG/RealMainContainer/MenuContainer" instance=ExtResource("5_ajf2v")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="FieldEffectsMenu" parent="MainContainer/BG/RealMainContainer/MenuContainer" instance=ExtResource("10_daosl")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8

[node name="LowerButtonContainer2" type="HBoxContainer" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="SaveImageButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Save
PNG"
icon = ExtResource("6_gu5vi")
expand_icon = true

[node name="SaveJSONButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Save
RES"
icon = ExtResource("6_gu5vi")
expand_icon = true

[node name="LoadJSONButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Load
RES"
icon = ExtResource("7_bgm7v")
expand_icon = true

[node name="Spacer3" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="ResetButton" type="Button" parent="MainContainer/BG/RealMainContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 65
theme_override_constants/line_spacing = -8
text = "Reset Everything NO UNDO"
icon = ExtResource("8_bgm7v")
expand_icon = true

[node name="GithubButton" type="Button" parent="MainContainer/BG/RealMainContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_behavior_recursive = 1
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 65
theme_override_constants/line_spacing = -8
icon = ExtResource("15_piel0")
icon_alignment = 1
expand_icon = true

[node name="Spacer4" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 8

[node name="Transitions" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(45, 2025)
layout_mode = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="Transit1" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("1_pbqvl")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Transit2" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("3_25mr1")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Transit3" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("4_i4lxe")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="LogoFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg")
use_native_dialog = true

[node name="LoadFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
file_mode = 0
access = 1
filters = PackedStringArray("*.res")
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
initial_position = 2
access = 1
filters = PackedStringArray("*.res")
use_native_dialog = true

[node name="SaveImageDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
initial_position = 2
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true
